--- a/package.json
+++ b/package.json
@@ -24,5 +24,5 @@
         "file": "fox.dark.less",
         "dark": true
     },
-    "screenshot": "ss/rb-js.PNG"
+    "screenshot": "screenshots/fox.dark--js.jpg"
 }
